# nano-llm-lab

./: .gitignore  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
configs/: small.yaml  tiny.yaml
configs/dpo/: qwen2.5-0.5b-dpo.yaml
configs/lora/: qwen2.5-0.5b-lora.yaml  qwen2.5-0.5b-qlora.yaml
configs/sft/: qwen2.5-0.5b.yaml
configs/tool_dpo/: qwen2.5-0.5b-tool-dpo.yaml
configs/tool_sft/: qwen2.5-0.5b-tool-lora.yaml
data/dpo/: eval.jsonl  train.jsonl  val.jsonl
data/sft/: eval.jsonl  train.jsonl  val.jsonl
data/tool_dpo/: train.jsonl  val.jsonl
data/tools/: solidity_tools.json  tool_use_eval.jsonl  train.jsonl  val.jsonl
docs/reliability/: bfcl_eval_report.md  constrained_decoding.md  tool_sft_eval_report.md  validity_report.md
docs/sft/: eval_report.md  (+1 more)
nanolab/: __init__.py  config.py  sampling.py  utils.py
scripts/: bfcl_eval.py  compare_runs.py  constrained_demo.py  download_data.py  dpo_eval.py  dpo_train.py  generate_samples.py  grpo_train.py  lora_eval.py  lora_train.py  merge_adapter.py  plot_loss.py  plot_stage3_comparison.py  ppo_train.py  prepare_dataset.py  sft_eval.py  sft_generate.py  sft_train.py  tool_sft_eval.py  train.py  train_tokenizer.py  verify_tool_dataset.py
tests/: conftest.py  test_attention.py  test_block.py  test_constrained_schema.py  test_dataset.py  test_dpo_dataset.py  test_gpt.py  test_harness_guards.py  test_mlp.py  test_norm.py  test_rope.py  test_sampling.py  test_sft_chat_format.py  test_sft_dataset.py
tokenizer/: tokenizer.json
(+28 files in other folders)
