[project]
name = "nanolab"
version = "0.1.0"
description = "A decoder-only transformer LLM implemented from scratch in PyTorch, trained on TinyStories, and carried through post-training (SFT, LoRA/QLoRA, DPO)."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["nanolab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
